tests/e2e/master-seed/kubermatic/01-assert.yaml
# kubermatic
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubermatic-api
  namespace: kubermatic
status:
  readyReplicas: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubermatic-dashboard
  namespace: kubermatic
status:
  readyReplicas: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubermatic-master-controller-manager
  namespace: kubermatic
status:
  readyReplicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubermatic-operator
  namespace: kubermatic
status:
  readyReplicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubermatic-seed-controller-manager
  namespace: kubermatic
status:
  readyReplicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubermatic-webhook
  namespace: kubermatic
status:
  readyReplicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodeport-proxy-envoy
  namespace: kubermatic
status:
  readyReplicas: 3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodeport-proxy-updater
  namespace: kubermatic
status:
  readyReplicas: 1
---
# FIXME: This needs to be templated since we might skip the seed!
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: seed-proxy-india   # TODO: ENV SPECIFIC name. Can we templatize it?
#   namespace: kubermatic
# status:
#   readyReplicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seed-proxy-kubermatic # TODO: ENV SPECIFIC name. Can we templatize it?
  namespace: kubermatic
status:
  readyReplicas: 1
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: metering-prometheus
  namespace: kubermatic
status:
  readyReplicas: 1
---
apiVersion:  networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubermatic
  namespace: kubermatic
status:
  loadBalancer:
    (length(ingress) > `0`): true
